sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: ')' expected but integer literal found.
			position +=1;
                                   ^